<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="repo"
            type="com.annalubawa.reposearchapp.domain.model.Repository" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/detailsLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    tools:context=".ui.RepositoryDetailsFragment">

    <ImageView
        android:id="@+id/imageView"
        imageBinding="@{repo.owner.avatarUrl}"
        android:layout_width="0dp"
        android:layout_height="263dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/repository_owner_avatar"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/backTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="55dp"
        android:text="@string/back"
        android:textColor="@color/colorPrimary"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/backArrow"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="55dp"
        android:contentDescription="@string/back_arrow"
        android:src="@drawable/ic_back_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/repoByTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="sans-serif-medium"
        android:letterSpacing="-0.02"
        android:lineSpacingExtra="5sp"
        android:text="@string/repo_by"
        android:textColor="@color/colorTextTransparent"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backTextView" />

    <TextView
        android:id="@+id/repoAuthorNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="20dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:letterSpacing="0.01"
        android:lineSpacingExtra="6sp"
        android:textColor="@color/colorPrimary"
        android:textSize="28sp"
        android:textStyle="bold"
        android:text="@{repo.owner.name}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repoByTextView"
        tools:text="Repo Author Name" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="9dp"
        android:contentDescription="@string/star_icon"
        android:src="@drawable/ic_star_icon_filled"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repoAuthorNameTextView" />

    <TextView
        android:id="@+id/repoStarsNumTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="6dp"
        android:letterSpacing="-0.01"
        android:lineSpacingExtra="5sp"
        android:textColor="@color/colorTextHalfTransparent"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/repoAuthorNameTextView"
        starsNumTextBinding="@{repo.numberOfStars}"
        tools:text="Number of Stars (234)" />

    <TextView
        android:id="@+id/repoTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-medium"
        android:letterSpacing="-0.02"
        android:lineSpacingExtra="5sp"
        android:text="@{repo.name}"
        android:textColor="@color/colorTextBlack"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/viewOnlineButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:text="Repo title" />

    <TextView
        android:id="@+id/commitsHistoryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="39dp"
        android:text="@string/commits_history"
        android:textColor="@color/colorTextBlack"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repoTitleTextView" />

    <Button
        android:id="@+id/viewOnlineButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="118dp"
        android:layout_height="30dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/view_online_button_background"
        android:letterSpacing="-0.02"
        android:lineSpacingExtra="5sp"
        android:text="@string/view_online"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <LinearLayout
        android:id="@+id/commitsLiinearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/commitsHistoryTextView" />

    <ImageView
        android:id="@+id/shareButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="92dp"
        android:contentDescription="@string/share_repository_button"
        android:src="@drawable/share_button_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/commitsLiinearLayout" />

    <TextView
        android:id="@+id/shareTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/share_repo"
        android:textColor="@color/colorAccent"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/shareButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/shareIcon"
        app:layout_constraintTop_toTopOf="@+id/shareButton" />

    <ImageView
        android:id="@+id/shareIcon"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="9dp"
        android:contentDescription="@string/share_icon"
        android:letterSpacing="-0.02"
        android:lineSpacingExtra="5sp"
        android:src="@drawable/ic_share_icon"
        app:layout_constraintEnd_toStartOf="@+id/shareTextView"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/shareButton"
        app:layout_constraintTop_toTopOf="@+id/shareButton" />

</androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>